--- a/index.html
+++ b/index.html
@@ -1,4 +1,26 @@
-Hello World
-<ul>
-<li> item </li>
-</ul>
+<!DOCTYPE html>
+
+<html>
+	<head>
+		<link href="https://fonts.googleapis.com/css?family=Lato:400,700|Merriweather:400,400i,700&display=swap" rel="stylesheet">
+		<link href="./css/normalize.css" type="text/css" rel="stylesheet">
+		<link href="./css/style.css" type="text/css" rel="stylesheet"> 
+		<title>Anthony Bravo</title>
+	</head>
+
+	<body>
+		<header>
+			<nav>
+
+			</nav>
+		</header>
+
+		<main>
+			<img src="./images/profilePic.jpg">
+		</main>
+
+		<footer>
+			
+		</footer>
+	</body>
+</html>
