--- a/index.html
+++ b/index.html
@@ -2,18 +2,46 @@
 
 <html>
 	<head>
+		<!-- Required meta tags -->
+    	<meta charset="utf-8">
+    	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    	<!-- Bootstrap CSS -->
+    	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
 		<link href="https://fonts.googleapis.com/css?family=Lato:400,700|Merriweather:400,400i,700&display=swap" rel="stylesheet">
 		<link href="./css/normalize.css" type="text/css" rel="stylesheet">
 		<link href="./css/style.css" type="text/css" rel="stylesheet"> 
+
 		<title>Anthony Bravo</title>
 	</head>
 
 	<body>
 		<header>
-			<nav>
-
+			<nav class="navbar navbar-expand-lg navbar-light navbar-dark bg-dark">
+			  <span class="navbar-brand">Anthony Bravo</span>
+			  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+			    <span class="navbar-toggler-icon"></span>
+			  </button>
+			  <div class="collapse navbar-collapse" id="navbarText">
+			    <ul class="navbar-nav ml-auto">
+			      <li class="nav-item">
+			        <a class="nav-link" href="#">About me <span class="sr-only">(current)</span></a>
+			      </li>
+			      <li class="nav-item">
+			        <a class="nav-link" href="#">Projects</a>
+			      </li>
+			      <li class="nav-item">
+			        <a class="nav-link" href="#">Interest</a>
+			      </li>
+			      <li class="nav-item">
+			        <a class="nav-link" href="#">Contact me</a>
+			      </li>
+			    </ul>
+			  </div>
 			</nav>
 		</header>
+
 
 		<main>
 			<h1>Anthony Bravo</h1>
@@ -23,5 +51,11 @@
 		<footer>
 			
 		</footer>
+
+		<!-- Optional JavaScript -->
+    	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 	</body>
 </html>
