--- a/index.html
+++ b/index.html
@@ -1,67 +1,171 @@
 <!DOCTYPE html>
 
 <html>
-	<head>
-		<!-- Required meta tags -->
-    	<meta charset="utf-8">
-    	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<head>
+	<!-- Required meta tags -->
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    	<!-- Bootstrap CSS -->
-    	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<!-- Bootstrap CSS -->
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-		<link href="https://fonts.googleapis.com/css?family=Lato:400,700|Merriweather:400,400i,700&display=swap" rel="stylesheet">
-		<link href="./css/normalize.css" type="text/css" rel="stylesheet">
-		<link href="./css/style.css" type="text/css" rel="stylesheet"> 
+	<link href="https://fonts.googleapis.com/css?family=Lato:400,700|Merriweather:400,400i,700&display=swap" rel="stylesheet">
+	<link href="./css/normalize.css" type="text/css" rel="stylesheet">
+	<link href="./css/style.css" type="text/css" rel="stylesheet"> 
 
-		<title>Anthony Bravo</title>
-	</head>
+	<title>Anthony Bravo</title>
+</head>
 
-	<body>
-		<header>
-			<nav class="navbar navbar-expand-lg navbar-light navbar-dark bg-dark">
-			  <span class="navbar-brand">Anthony Bravo</span>
-			  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-			    <span class="navbar-toggler-icon"></span>
-			  </button>
-			  <div class="collapse navbar-collapse" id="navbarText">
-			    <ul class="navbar-nav ml-auto">
-			      <li class="nav-item">
-			        <a class="nav-link" href="#">About me <span class="sr-only">(current)</span></a>
-			      </li>
-			      <li class="nav-item">
-			        <a class="nav-link" href="#">Projects</a>
-			      </li>
-			      <li class="nav-item">
-			        <a class="nav-link" href="#">Interest</a>
-			      </li>
-			      <li class="nav-item">
-			        <a class="nav-link" href="#">Contact me</a>
-			      </li>
-			    </ul>
-			  </div>
-			</nav>
-		</header>
+<body>
+	<header>
+		<nav class="navbar navbar-expand-lg navbar-light navbar-dark bg-dark">
+			<span class="navbar-brand">Anthony Bravo</span>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarText">
+				<ul class="navbar-nav ml-auto">
+					<li class="nav-item">
+						<a class="nav-link" href="#">About me <span class="sr-only">(current)</span></a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Projects</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Interest</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Contact me</a>
+					</li>
+				</ul>
+			</div>
+		</nav>
+	</header>
 
 
-		<main>
-			<section class="about-me">
-				<h3 class="text-center">About me</h3>
-				<img src="./images/profilePic.jpg" class="rounded-circle img-responsive" alt="Bird">
-				<p>
-					Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32. Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.  
-				</p>
-			</section>
-			
-		</main>
+	<main>
+		<section class="about-me">
+			<h3 class="text-center">About me</h3>
+			<img src="./images/profilePic.jpg" class="rounded-circle img-responsive" alt="Bird">
+			<p>
+				Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32. Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.  
+			</p>
+		</section>
 
-		<footer>
-			
-		</footer>
+		<section class="projects">
+			<div class="album py-5 bg-light">
+				<h3 class="text-center">Projects</h3>
+				<div class="container">
+					<div class="row">
+						<div class="col-md-4">
+							<h5 class="text-center">Project Title</h5>
+							<div class="card mb-4 box-shadow">
+								<img class="card-img-top" src="./images/profilePic.jpg" alt="Card image cap">
+								<div class="card-body">
+									<p class="card-text">Project Description</p>
+									<div class="d-flex justify-content-between align-items-center">
+										<div class="btn-group">
+											<button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+										</div>
+										<small class="text-muted">date</small>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4">
+							<h5 class="text-center">Project Title</h5>
+							<div class="card mb-4 box-shadow">
+								<img class="card-img-top" src="./images/profilePic.jpg" alt="Card image cap">
+								<div class="card-body">
+									<p class="card-text">Project Description</p>
+									<div class="d-flex justify-content-between align-items-center">
+										<div class="btn-group">
+											<button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+										</div>
+										<small class="text-muted">date</small>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4">
+							<h5 class="text-center">Project Title</h5>
+							<div class="card mb-4 box-shadow">
+								<img class="card-img-top" src="./images/profilePic.jpg" alt="Card image cap">
+								<div class="card-body">
+									<p class="card-text">Project Description</p>
+									<div class="d-flex justify-content-between align-items-center">
+										<div class="btn-group">
+											<button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+										</div>
+										<small class="text-muted">date</small>
+									</div>
+								</div>
+							</div>
+						</div>
 
-		<!-- Optional JavaScript -->
-    	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-	</body>
+						<div class="col-md-4">
+							<h5 class="text-center">Project Title</h5>
+							<div class="card mb-4 box-shadow">
+								<img class="card-img-top" src="./images/profilePic.jpg" alt="Card image cap">
+								<div class="card-body">
+									<p class="card-text">Project Description</p>
+									<div class="d-flex justify-content-between align-items-center">
+										<div class="btn-group">
+											<button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+										</div>
+										<small class="text-muted">date</small>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4">
+							<h5 class="text-center">Project Title</h5>
+							<div class="card mb-4 box-shadow">
+								<img class="card-img-top" src="./images/profilePic.jpg" alt="Card image cap">
+								<div class="card-body">
+									<p class="card-text">Project Description</p>
+									<div class="d-flex justify-content-between align-items-center">
+										<div class="btn-group">
+											<button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+										</div>
+										<small class="text-muted">date</small>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4">
+							<h5 class="text-center">Project Title</h5>
+							<div class="card mb-4 box-shadow">
+								<img class="card-img-top" src="./images/profilePic.jpg" alt="Card image cap">
+								<div class="card-body">
+									<p class="card-text">Project Description</p>
+									<div class="d-flex justify-content-between align-items-center">
+										<div class="btn-group">
+											<button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+										</div>
+										<small class="text-muted">date</small>
+									</div>
+								</div>
+							</div>
+						</div>
+
+
+					</div>
+				</div>
+			</div>
+
+		</section>
+
+	</main>
+
+	<footer>
+
+	</footer>
+
+	<!-- Optional JavaScript -->
+	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+</body>
 </html>
