--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
 		<link href="https://fonts.googleapis.com/css?family=Lato:400,700|Merriweather:400,400i,700&display=swap" rel="stylesheet">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<link href="./css/normalize.css" type="text/css" rel="stylesheet">
 		<link href="./css/style.css" type="text/css" rel="stylesheet"> 
 
@@ -188,9 +189,16 @@
 
 		</main>
 
-		<footer class="contact-me">
-			<h3 class="text-center">Contact me</h3>
+		<footer class="contact">
+			<h3 class="text-center">Contact Me</h3>
+			<a href="#" class="fa fa-facebook"></a>
+			<a href="#" class="fa fa-linkedin"></a>
+			<a href="#" class="fa fa-google"></a>
+			<a href="#" class="fa fa-github"></a>
+			
 		</footer>
+
+		
 
 		<!-- Optional JavaScript -->
 		<!-- jQuery first, then Popper.js, then Bootstrap JS -->
