--- a/index.html
+++ b/index.html
@@ -189,12 +189,24 @@
 
 		</main>
 
-		<footer class="contact">
+		<footer>
 			<h3 class="text-center">Contact Me</h3>
-			<a href="#" class="fa fa-facebook"></a>
-			<a href="#" class="fa fa-linkedin"></a>
-			<a href="#" class="fa fa-google"></a>
-			<a href="#" class="fa fa-github"></a>
+			<div class="container">
+				 <div class="row"> 
+				 	<div class="col-sm text-center">
+						<a href="https://www.linkedin.com/in/abravo3641/" target="_blank" class="fa fa-linkedin"></a>
+					</div>
+					<div class="col-sm text-center">
+						<a href="mailto:abravo3641@gmail.com" target="_blank" class="fa fa-google"></a>
+					</div>
+					<div class="col-sm text-center">
+						<a href="https://github.com/abravo3641" target="_blank" class="fa fa-github"></a>
+					</div>
+					<div class="col-sm text-center">
+						<a href="#" target="_blank" class="fa fa-facebook" ></a>
+					</div>
+				</div>
+			</div>
 			
 		</footer>
 
