--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 						<a href="https://www.linkedin.com/in/abravo3641/" target="_blank" class="fa fa-linkedin"></a>
 					</div>
 					<div class="col-sm text-center">
-						<a href="mailto:abravo3641@gmail.com" class="fa fa-google">t</a>
+						<a href="mailto:abravo3641@gmail.com" class="fa fa-google"></a>
 					</div>
 					<div class="col-sm text-center">
 						<a href="https://github.com/abravo3641" target="_blank" class="fa fa-github"></a>
