--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 							<div class="col-md-4">
 								<h5 class="text-center">Olacare</h5>
 								<div class="card mb-4 box-shadow">
-									<img class="card-img-top" src="./images/Olacare.png" alt="Card image cap">
+									<img class="card-img-top" src="./images/olacare.png" alt="Card image cap">
 									<div class="card-body">
 										<p class="card-text">Project Description</p>
 										<div class="d-flex justify-content-between align-items-center">
