finished project section

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 								<div class="card mb-4 box-shadow">
 									<img class="card-img-top" src="./images/olacare.png" alt="Card image cap">
 									<div class="card-body">
-										<p class="card-text">Project Description</p>
+										<p class="card-text">A customizable sexual health iOS app that connects users to the best friendly doctors based on their sexuality</p>
 										<div class="d-flex justify-content-between align-items-center">
 											<div class="btn-group">
 												<a href="https://github.com/abravo3641/Olacare" target="_blank">
@@ -80,7 +80,7 @@
 								<div class="card mb-4 box-shadow">
 									<img class="card-img-top" src="./images/sportConnect.png" alt="Card image cap">
 									<div class="card-body">
-										<p class="card-text">Project Description</p>
+										<p class="card-text">An app that allows users to find someone with whom one could play a pickup game or participate in other physical activities</p>
 										<div class="d-flex justify-content-between align-items-center">
 											<div class="btn-group">
 												<a href="https://github.com/abravo3641/SportsConnect" target="_blank">
@@ -97,7 +97,7 @@
 								<div class="card mb-4 box-shadow">
 									<img class="card-img-top" src="./images/cityDirect.png" alt="Card image cap">
 									<div class="card-body">
-										<p class="card-text">Project Description</p>
+										<p class="card-text">An iOS app that allows students to check and update building facilities around their campus based on their working conditions</p>
 										<div class="d-flex justify-content-between align-items-center">
 											<div class="btn-group">
 												<a href="https://github.com/abravo3641/citydirect" target="_blank">
@@ -115,7 +115,7 @@
 								<div class="card mb-4 box-shadow">
 									<img class="card-img-top" src="./images/textEditor.png" alt="Card image cap">
 									<div class="card-body">
-										<p class="card-text">Project Description</p>
+										<p class="card-text">A simple text editor that allows users to type and draw using lines. The result can be saved as a text file </p>
 										<div class="d-flex justify-content-between align-items-center">
 											<div class="btn-group">
 												<a href="https://github.com/abravo3641/Text-Editor" target="_blank">
@@ -132,7 +132,7 @@
 								<div class="card mb-4 box-shadow">
 									<img class="card-img-top" src="./images/mineswepper.png" alt="Card image cap">
 									<div class="card-body">
-										<p class="card-text">Project Description</p>
+										<p class="card-text">A modified version of the game built using assembly. Users can step through the table until they land on a bomb</p>
 										<div class="d-flex justify-content-between align-items-center">
 											<div class="btn-group">
 												<a href="https://github.com/abravo3641/Minesweeper" target="_blank">
@@ -149,7 +149,7 @@
 								<div class="card mb-4 box-shadow">
 									<img class="card-img-top" src="./images/collegeDirect.jpg" alt="Card image cap">
 									<div class="card-body">
-										<p class="card-text">Project Description</p>
+										<p class="card-text">A website that gives students easy access to supplemental materials for their specific course at their specific school</p>
 										<div class="d-flex justify-content-between align-items-center">
 											<div class="btn-group">
 												<a href="https://github.com/abravo3641/College-Direct" target="_blank">
