--- a/index.html
+++ b/index.html
@@ -178,21 +178,21 @@
 				    	<img src="./images/drone.jpg" class="rounded-circle img-responsive" alt="Bird">
 				    	<h5 class="text-center">Drones</h5>
 				      	<p>
-				      		Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source
+				      		Flying drones has been one of the most recent hobbies that I have gotten into. Although most of NYC is labeled as a no-fly zone I still make the effort and travel that extra mile to legally fly my Holy Stone HS 100. I managed to pass the FAA remote pilot exam which lets me fly my drone commercially and use it into to make cool projects. 
 				      	</p>
 				    </div>
 				    <div class="col-sm">
 				      	<img src="./images/volleyball.png" class="rounded-circle img-responsive" alt="Bird">
 				      	<h5 class="text-center">Volleyball</h5>
 				      	<p>
-				      		Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source
+				      		Despite being Latino and loving to watch soccer I have to say volleyball is by far my favorite sport to play. Ever since playing for my high school team it has stuck with me through my college years. Although I don't play it competitive anymore you can still find me sometimes by the beach courts pretending to be a pro. 
 				      	</p>
 				    </div>
 				    <div class="col-sm">
 				    	<img src="./images/hiking.png" class="rounded-circle img-responsive" alt="Bird">
 				    	<h5 class="text-center">Hiking</h5>
 				      	<p>
-				      		Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source
+				      		Whenever I need some time to think or cool off there is not a better activity for me other than hiking. It gives me that peace and quiet that one needs after spending so much time in the city. I recently took a trip to Boulder, Colorado and had one of the best hikes ever by hiking the foothills. It's not everyday one is 5,000 feet above sea level.
 				      	</p>
 				    </div>
 				  </div>
