--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 				<h3 class="text-center">About me</h3>
 				<img src="./images/profilePic.jpg" class="rounded-circle img-responsive" alt="Bird">
 				<p>
-					Hi! I'm Anthony Bravo an upcoming senior majoring in Computer Engineering at the City College of New York. Currently, I am an extension developer intern at Memorial Sloan Kettering Cancer Center where I create and deploy new extensions using Java to aid in the analysis of 4DCT and 4DMRI image scans. Previously I was part of Codepath's iOS university program where I got interested in app development. I carried this interest outside of the program and participated in the Zahn Center Competition where I got to implement the skills I learned to build a tech start-up named Olacare in a team of four. I have recently begun my journey into web development through CUNY Tech Prep and I am looking forward to learning full-stack JavaScript by developing many projects. I am passionate about learning using technology new technology in areas that have not been used before and can greatly benefit from it. Other than learning new technologies I like flying drones, hiking and playing volleyball. You can read more below!
+					Hi! I'm Anthony Bravo an upcoming senior majoring in Computer Engineering at the City College of New York. Currently, I am an extension developer intern at Memorial Sloan Kettering Cancer Center where I create and deploy new extensions using Java to aid in the analysis of 4DCT and 4DMRI image scans. Previously I was part of Codepath's iOS university program where I got interested in app development. I carried this interest outside of the program and participated in the Zahn Center Competition where I got to implement the skills I learned to build a tech start-up named Olacare in a team of four. I have recently begun my journey into web development through CUNY Tech Prep and I am looking forward to learning full-stack JavaScript by developing many projects. I am passionate about learning and using technology in areas that have not been used before and can greatly benefit from it. Other than learning new technologies I like flying drones, hiking and playing volleyball. You can read more below!
 				</p>
 			</section>
 
@@ -115,7 +115,7 @@
 								<div class="card mb-4 box-shadow">
 									<img class="card-img-top" src="./images/textEditor.png" alt="Card image cap">
 									<div class="card-body">
-										<p class="card-text">A simple text editor that allows users to type and draw using lines. The result can be saved as a text file </p>
+										<p class="card-text">A text editor that allows users to type and draw using lines. The result can be saved as a text file </p>
 										<div class="d-flex justify-content-between align-items-center">
 											<div class="btn-group">
 												<a href="https://github.com/abravo3641/Text-Editor" target="_blank">
@@ -149,7 +149,7 @@
 								<div class="card mb-4 box-shadow">
 									<img class="card-img-top" src="./images/collegeDirect.jpg" alt="Card image cap">
 									<div class="card-body">
-										<p class="card-text">A website that gives students easy access to supplemental materials for their specific course at their specific school</p>
+										<p class="card-text">A website that gives students easy access to supplemental materials for their specific course at their school</p>
 										<div class="d-flex justify-content-between align-items-center">
 											<div class="btn-group">
 												<a href="https://github.com/abravo3641/College-Direct" target="_blank">
@@ -178,7 +178,7 @@
 				    	<img src="./images/drone.jpg" class="rounded-circle img-responsive" alt="Bird">
 				    	<h5 class="text-center">Drones</h5>
 				      	<p>
-				      		Flying drones has been one of the most recent hobbies that I have gotten into. Although most of NYC is labeled as a no-fly zone I still make the effort and travel that extra mile to legally fly my Holy Stone HS 100. I managed to pass the FAA remote pilot exam which lets me fly my drone commercially and use it into to make cool projects. 
+				      		Flying drones has been one of the most recent hobbies that I have gotten into. Although most of NYC is labeled as a no-fly zone I still make the effort to travel that extra mile so I can legally fly my Holy Stone HS 100. I managed to pass the FAA remote pilot exam which lets me fly my drone commercially and use it into to make cool projects. 
 				      	</p>
 				    </div>
 				    <div class="col-sm">
