--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		<main>
 			<section class="about-me" id="about-me-link">
 				<h3 class="text-center">About me</h3>
-				<img src="./images/profilePic.jpg" class="rounded-circle img-responsive" alt="Bird">
+				<img src="./images/profilePic.jpg" class="rounded-circle img-responsive" alt="Anthony Profile Picture">
 				<p>
 					Hi! I'm Anthony Bravo an upcoming senior majoring in Computer Engineering at the City College of New York. Currently, I am an extension developer intern at Memorial Sloan Kettering Cancer Center where I create and deploy new extensions using Java to aid in the analysis of 4DCT and 4DMRI image scans. Previously I was part of Codepath's iOS university program where I got interested in app development. I carried this interest outside of the program and participated in the Zahn Center Competition where I got to implement the skills I learned to build a tech start-up named Olacare in a team of four. I have recently begun my journey into web development through CUNY Tech Prep and I am looking forward to learning full-stack JavaScript by developing many projects. I am passionate about learning and using technology in areas that have not been used before and can greatly benefit from it. Other than learning new technologies I like flying drones, hiking and playing volleyball. You can read more below!
 				</p>
@@ -61,7 +61,7 @@
 							<div class="col-md-4">
 								<h5 class="text-center">Olacare</h5>
 								<div class="card mb-4 box-shadow">
-									<img class="card-img-top" src="./images/olacare.png" alt="Card image cap">
+									<img class="card-img-top" src="./images/olacare.png" alt="Olacare project">
 									<div class="card-body">
 										<p class="card-text">A customizable sexual health iOS app that connects users to the best friendly doctors based on their sexuality</p>
 										<div class="d-flex justify-content-between align-items-center">
@@ -78,7 +78,7 @@
 							<div class="col-md-4">
 								<h5 class="text-center">Sport Connect</h5>
 								<div class="card mb-4 box-shadow">
-									<img class="card-img-top" src="./images/sportConnect.png" alt="Card image cap">
+									<img class="card-img-top" src="./images/sportConnect.png" alt="sportConnect project">
 									<div class="card-body">
 										<p class="card-text">An app that allows users to find someone with whom one could play a pickup game or participate in other physical activities</p>
 										<div class="d-flex justify-content-between align-items-center">
@@ -95,7 +95,7 @@
 							<div class="col-md-4">
 								<h5 class="text-center">City Direct</h5>
 								<div class="card mb-4 box-shadow">
-									<img class="card-img-top" src="./images/cityDirect.png" alt="Card image cap">
+									<img class="card-img-top" src="./images/cityDirect.png" alt="City Direct project">
 									<div class="card-body">
 										<p class="card-text">An iOS app that allows students to check and update building facilities around their campus based on their working conditions</p>
 										<div class="d-flex justify-content-between align-items-center">
@@ -113,7 +113,7 @@
 							<div class="col-md-4">
 								<h5 class="text-center">Text Editor</h5>
 								<div class="card mb-4 box-shadow">
-									<img class="card-img-top" src="./images/textEditor.png" alt="Card image cap">
+									<img class="card-img-top" src="./images/textEditor.png" alt="text editor project">
 									<div class="card-body">
 										<p class="card-text">A text editor that allows users to type and draw using lines. The result can be saved as a text file </p>
 										<div class="d-flex justify-content-between align-items-center">
@@ -130,7 +130,7 @@
 							<div class="col-md-4">
 								<h5 class="text-center">Minesweeper</h5>
 								<div class="card mb-4 box-shadow">
-									<img class="card-img-top" src="./images/mineswepper.png" alt="Card image cap">
+									<img class="card-img-top" src="./images/mineswepper.png" alt="Minesweeper project">
 									<div class="card-body">
 										<p class="card-text">A modified version of the game built using assembly. Users can step through the table until they land on a bomb</p>
 										<div class="d-flex justify-content-between align-items-center">
@@ -147,7 +147,7 @@
 							<div class="col-md-4">
 								<h5 class="text-center">College Direct</h5>
 								<div class="card mb-4 box-shadow">
-									<img class="card-img-top" src="./images/collegeDirect.jpg" alt="Card image cap">
+									<img class="card-img-top" src="./images/collegeDirect.jpg" alt="College Direct Project">
 									<div class="card-body">
 										<p class="card-text">A website that gives students easy access to supplemental materials for their specific course at their school</p>
 										<div class="d-flex justify-content-between align-items-center">
@@ -175,21 +175,21 @@
 				<div class="container">
 				  <div class="row">
 				    <div class="col-sm">
-				    	<img src="./images/drone.jpg" class="rounded-circle img-responsive" alt="Bird">
+				    	<img src="./images/drone.jpg" class="rounded-circle img-responsive" alt="Controlling a drone">
 				    	<h5 class="text-center">Drones</h5>
 				      	<p>
 				      		Flying drones has been one of the most recent hobbies that I have gotten into. Although most of NYC is labeled as a no-fly zone I still make the effort to travel that extra mile so I can legally fly my Holy Stone HS 100. I managed to pass the FAA remote pilot exam which lets me fly my drone commercially and use it into to make cool projects. 
 				      	</p>
 				    </div>
 				    <div class="col-sm">
-				      	<img src="./images/volleyball.png" class="rounded-circle img-responsive" alt="Bird">
+				      	<img src="./images/volleyball.png" class="rounded-circle img-responsive" alt="Volleyball team picutre">
 				      	<h5 class="text-center">Volleyball</h5>
 				      	<p>
 				      		Despite being Latino and loving to watch soccer I have to say volleyball is by far my favorite sport to play. Ever since playing for my high school team it has stuck with me through my college years. Although I don't play it competitive anymore you can still find me sometimes by the beach courts pretending to be a pro. 
 				      	</p>
 				    </div>
 				    <div class="col-sm">
-				    	<img src="./images/hiking.png" class="rounded-circle img-responsive" alt="Bird">
+				    	<img src="./images/hiking.png" class="rounded-circle img-responsive" alt="hiking">
 				    	<h5 class="text-center">Hiking</h5>
 				      	<p>
 				      		Whenever I need some time to think or cool off there is not a better activity for me other than hiking. It gives me that peace and quiet that one needs after spending so much time in the city. I recently took a trip to Boulder, Colorado and had one of the best hikes ever by hiking the foothills. It's not everyday one is 5,000 feet above sea level.
