updated bio & adding new projects

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 				<h3 class="text-center">About me</h3>
 				<img src="./images/profilePic.jpg" class="rounded-circle img-responsive" alt="Anthony Profile Picture">
 				<p>
-					Hi! I'm Anthony Bravo an upcoming senior majoring in Computer Engineering at the City College of New York. Currently, I am an extension developer intern at Memorial Sloan Kettering Cancer Center where I create and deploy new extensions using Java to aid in the analysis of 4DCT and 4DMRI image scans. Previously I was part of Codepath's iOS university program where I got interested in app development. I carried this interest outside of the program and participated in the Zahn Center Competition where I got to implement the skills I learned to build a tech start-up named Olacare in a team of four. I have recently begun my journey into web development through CUNY Tech Prep and I am looking forward to learning full-stack JavaScript by developing many projects. I am passionate about learning and using technology in areas that have not been used before and can greatly benefit from it. Other than learning new technologies I like flying drones, hiking and playing volleyball. You can read more below!
+					Hi! I'm Anthony Bravo an upcoming senior majoring in Computer Engineering at the City College of New York. I have a passion for using backend technologies like Node JS and Flask, but I also have experience with front-end tools like React. Recently I completed my software engineering internship at Capital One where I helped modernize an image pipeline component by using serverless architecture on AWS. I was also part of the 5th cohort for CUNY Tech Prep which is a year-long full-stack JavaScript program that taught me how to create full-stack web applications. Lastly, I also got the opportunity to take an iOS development course offered by Codepath where I learned how to create iOS apps through various project implementations Other than learning new technologies I like flying drones, hiking and playing volleyball. You can read more below!
 				</p>
 			</section>
 
@@ -58,6 +58,57 @@
 					<h3 class="text-center">Projects</h3>
 					<div class="container">
 						<div class="row">
+							<div class="col-md-4">
+								<h5 class="text-center">Safe Maps</h5>
+								<div class="card mb-4 box-shadow">
+									<img class="card-img-top" src="./images/safe-maps.png" alt="safemaps project">
+									<div class="card-body">
+										<p class="card-text">A mobile application that generates safer routes by avoiding clustered crime regions obtained from NYPD open data.</p>
+										<div class="d-flex justify-content-between align-items-center">
+											<div class="btn-group">
+												<a href="https://github.com/abravo3641/Olacare" target="_blank">
+													<button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+												</a>
+											</div>
+											<small class="text-muted">May 2020</small>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="col-md-4">
+								<h5 class="text-center">Find It Quick</h5>
+								<div class="card mb-4 box-shadow">
+									<img class="card-img-top" src="./images/find-it-quick.png" alt="Find it Quick project">
+									<div class="card-body">
+										<p class="card-text"> A full-stack web application that helps locals find and rate public restrooms in urban areas.</p>
+										<div class="d-flex justify-content-between align-items-center">
+											<div class="btn-group">
+												<a href="https://github.com/abravo3641/Olacare" target="_blank">
+													<button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+												</a>
+											</div>
+											<small class="text-muted">Jan 2020</small>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="col-md-4">
+								<h5 class="text-center">Resident CCNY</h5>
+								<div class="card mb-4 box-shadow">
+									<img class="card-img-top" src="./images/resident-ccny.png" alt="Resident CCNY project">
+									<div class="card-body">
+										<p class="card-text">A platform where resident staff can post upcoming events for students that dorm at CCNY Towers</p>
+										<div class="d-flex justify-content-between align-items-center">
+											<div class="btn-group">
+												<a href="https://github.com/abravo3641/Olacare" target="_blank">
+													<button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+												</a>
+											</div>
+											<small class="text-muted">Nov 2019</small>
+										</div>
+									</div>
+								</div>
+							</div>
 							<div class="col-md-4">
 								<h5 class="text-center">Olacare</h5>
 								<div class="card mb-4 box-shadow">
@@ -185,7 +236,7 @@
 				      	<img src="./images/volleyball.png" class="rounded-circle img-responsive" alt="Volleyball team picutre">
 				      	<h5 class="text-center">Volleyball</h5>
 				      	<p>
-				      		Despite being Latino and loving to watch soccer I have to say volleyball is by far my favorite sport to play. Ever since playing for my high school team it has stuck with me through my college years. Although I don't play it competitive anymore you can still find me sometimes by the beach courts pretending to be a pro. 
+				      		Despite loving to watch soccer, I have to say volleyball is by far my favorite sport to play. Ever since playing for my high school team it has stuck with me through my college years. Although I don't play it competitive anymore you can still find me sometimes by the beach courts pretending to be a pro. 
 				      	</p>
 				    </div>
 				    <div class="col-sm">
@@ -205,17 +256,14 @@
 			<h3 class="text-center">Contact Me</h3>
 			<div class="container">
 				 <div class="row"> 
-				 	<div class="col-sm text-center">
-						<a href="https://www.linkedin.com/in/abravo3641/" target="_blank" class="fa fa-linkedin"></a>
-					</div>
 					<div class="col-sm text-center">
 						<a href="mailto:abravo3641@gmail.com" class="fa fa-google"></a>
 					</div>
 					<div class="col-sm text-center">
-						<a href="https://github.com/abravo3641" target="_blank" class="fa fa-github"></a>
+						<a href="https://www.linkedin.com/in/abravo3641/" target="_blank" class="fa fa-linkedin"></a>
 					</div>
 					<div class="col-sm text-center">
-						<a href="https://www.facebook.com/anthony.bravo.98" target="_blank" class="fa fa-facebook" ></a>
+						<a href="https://github.com/abravo3641" target="_blank" class="fa fa-github"></a>
 					</div>
 				</div>
 			</div>
