--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 										<p class="card-text">A mobile application that generates safer routes by avoiding clustered crime regions obtained from NYPD open data.</p>
 										<div class="d-flex justify-content-between align-items-center">
 											<div class="btn-group">
-												<a href="https://github.com/abravo3641/Olacare" target="_blank">
+												<a href="https://github.com/abravo3641/Crime-Analyzer" target="_blank">
 													<button type="button" class="btn btn-sm btn-outline-secondary">View</button>
 												</a>
 											</div>
@@ -83,7 +83,7 @@
 										<p class="card-text"> A full-stack web application that helps locals find and rate public restrooms in urban areas.</p>
 										<div class="d-flex justify-content-between align-items-center">
 											<div class="btn-group">
-												<a href="https://github.com/abravo3641/Olacare" target="_blank">
+												<a href="https://github.com/abravo3641/Find-It-Quick" target="_blank">
 													<button type="button" class="btn btn-sm btn-outline-secondary">View</button>
 												</a>
 											</div>
@@ -100,7 +100,7 @@
 										<p class="card-text">A platform where resident staff can post upcoming events for students that dorm at CCNY Towers</p>
 										<div class="d-flex justify-content-between align-items-center">
 											<div class="btn-group">
-												<a href="https://github.com/abravo3641/Olacare" target="_blank">
+												<a href="https://github.com/abravo3641/Resident-CCNY" target="_blank">
 													<button type="button" class="btn btn-sm btn-outline-secondary">View</button>
 												</a>
 											</div>
